--- a/vessel_graph_generation/geometries/create_geometries.py.ipynb
+++ b/vessel_graph_generation/geometries/create_geometries.py.ipynb
@@ -11,19 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-07-28T14:56:53.443441140Z",
-     "start_time": "2023-07-28T14:56:50.831072207Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import nibabel as nib\n",
-    "import itk\n",
+    "# import itk\n",
     "import json\n",
     "import yaml"
    ]
@@ -31,7 +27,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Lung mask"
+    "## Lung mask"
    ],
    "metadata": {
     "collapsed": false
@@ -39,36 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "atm255 = nib.load('/home/anna/Desktop/ATM_data/ATM_255/ATM_255_0000_seg_lobes.nii.gz')\n",
-    "atm255_data = atm255.get_fdata().astype(np.uint8)"
+    "atm = nib.load('/home/anna/Desktop/ATM_data/ATM_257/ATM_257_0000_seg_lobes.nii.gz')\n",
+    "atm_data = atm.get_fdata().astype(np.uint8)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-28T14:57:04.656573724Z",
-     "start_time": "2023-07-28T14:57:02.744324655Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "for i in range(1, 6):\n",
-    "    lobe = np.where(atm255_data == i, 1, 0).astype(np.uint8)\n",
-    "    np.save(f'atm255_{i}.npy', lobe)\n",
-    "    itk.imwrite(itk.GetImageFromArray(lobe.astype(np.uint8)), f'atm255_{i}.nrrd')"
+    "    lobe = np.where(atm_data == i, 1, 0).astype(np.uint8)\n",
+    "    np.save(f'atm257_{i}.npy', lobe)\n",
+    "    # itk.imwrite(itk.GetImageFromArray(lobe.astype(np.uint8)), f'atm257_{i}.nrrd')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-28T14:57:49.708243239Z",
-     "start_time": "2023-07-28T14:57:26.822973813Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -82,23 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
+    "scan = 'ATM_257'\n",
+    "out_file = f'/home/anna/Desktop/MA/ATM_data/{scan}/{scan}_roots.yml'\n",
+    "\n",
     "lobes = {}\n",
     "# weird_spacing\n",
-    "x_min = -196.8\n",
-    "x_max = 202.4\n",
-    "y_min = -59.4\n",
-    "y_max = 339.8\n",
-    "z_min = 445.9\n",
-    "z_max = 843.9\n",
-    "p_min = np.array((x_min, y_min, z_min))\n",
-    "p_max = np.array((x_max, y_max, z_max))\n",
-    "size = np.array((512, 512, 797))\n",
+    "with open(f'/home/anna/Desktop/MA/ATM_data/{scan}/{scan}_spacing.yml') as f:\n",
+    "    spacing = yaml.safe_load(f)\n",
+    "\n",
+    "p_min = np.array((spacing['x_min'], spacing['y_min'], spacing['z_min']))\n",
+    "p_max = np.array((spacing['x_max'], spacing['y_max'], spacing['z_max']))\n",
+    "size = np.array((spacing['x_out'], spacing['y_out'], spacing['z_out']))\n",
     "\n",
     "for lobe_idx in range(1, 6):\n",
-    "    with open(f'/home/anna/Desktop/ATM_data/ATM_255/lobe_markers/lobe{lobe_idx}.mrk.json') as f:\n",
+    "    with open(f'/home/anna/Desktop/MA/ATM_data/{scan}/lobe_markers/{scan}_lobe{lobe_idx}.mrk.json') as f:\n",
     "        lobe = json.load(f)\n",
     "    points = lobe['markups'][0]['controlPoints']\n",
     "    roots = []\n",
@@ -109,7 +97,7 @@
     "        position *= size\n",
     "        direction = (point2-point1) / np.linalg.norm(point2-point1)\n",
     "        roots.append({\n",
-    "            'name': points[2*i]['label'][:3],\n",
+    "            'name': points[2*i]['label'].split('-')[0],\n",
     "            'position': position.tolist(),\n",
     "            'direction': direction.tolist()\n",
     "        })\n",
@@ -117,15 +105,11 @@
     "roots_dir = {\n",
     "    'lobes': lobes\n",
     "}\n",
-    "with open('/media/windows/Documents and Settings/Anna/Documents/UNI/23Masterthesis/OCTA-seg/vessel_graph_generation/geometries/roots.yml', 'w') as f:\n",
+    "with open(out_file, 'w') as f:\n",
     "    yaml.dump(lobes, f, default_flow_style=False, sort_keys=False)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-28T15:41:30.640527025Z",
-     "start_time": "2023-07-28T15:41:30.620308215Z"
-    }
+    "collapsed": false
    }
   },
   {
