--- a/vessel_graph_generation/domain_adaptations.ipynb
+++ b/vessel_graph_generation/domain_adaptations.ipynb
@@ -19,7 +19,9 @@
    "source": [
     "import numpy as np\n",
     "import nibabel as nib\n",
-    "from scipy.ndimage import gaussian_filter"
+    "from scipy.ndimage import gaussian_filter\n",
+    "import glob\n",
+    "import shutil"
    ]
   },
   {
@@ -127,10 +129,33 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## dataset_3"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "in_dir = '/home/ahaas/airway-seg/vessel_graph_generation/datasets/dataset_1'\n",
+    "out_dir = '/home/ahaas/airway-seg/vessel_graph_generation/datasets/dataset_2'\n",
+    "    \n",
+    "for folder in glob.glob('/home/ahaas/airway-seg/vessel_graph_generation/datasets/lobes/*'):\n",
+    "    hash = folder.split('/')[-1]\n",
+    "    shutil.copyfile(f'{in_dir}/images/{hash}_adapted_vol.nii.gz', f'{out_dir}/images/{hash}_adapted_vol.nii.gz')\n",
+    "    affine = nib.load(f'{in_dir}/images/{hash}_adapted_vol.nii.gz').affine\n",
+    "    \n",
+    "    airway_mask = np.load(folder + '/airways.npy').astype(np.uint8)\n",
+    "    airway_mask = airway_mask >= 1\n",
+    "    \n",
+    "    nifti = nib.Nifti1Image(airway_mask.astype(np.uint8), affine) #np.eye(4))\n",
+    "    nib.save(nifti, f\"{out_dir}/labels/{hash}_adapted_label.nii.gz\")"
+   ],
    "metadata": {
     "collapsed": false
    }
