update create geometries

--- a/vessel_graph_generation/geometries/create_geometries.py.ipynb
+++ b/vessel_graph_generation/geometries/create_geometries.py.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## Create Geometry"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Create Geometry"
+   ]
   },
   {
    "cell_type": "code",
@@ -21,56 +22,62 @@
     "import nibabel as nib\n",
     "# import itk\n",
     "import json\n",
-    "import yaml"
+    "import yaml\n",
+    "import glob"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## Lung mask"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Lung mask"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "atm = nib.load('/home/anna/Desktop/ATM_data/ATM_257/ATM_257_0000_seg_lobes.nii.gz')\n",
     "atm_data = atm.get_fdata().astype(np.uint8)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "for i in range(1, 6):\n",
     "    lobe = np.where(atm_data == i, 1, 0).astype(np.uint8)\n",
     "    np.save(f'atm257_{i}.npy', lobe)\n",
     "    # itk.imwrite(itk.GetImageFromArray(lobe.astype(np.uint8)), f'atm257_{i}.nrrd')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## Bronchi roots"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Bronchi roots"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "scan = 'ATM_257'\n",
@@ -107,19 +114,25 @@
     "}\n",
     "with open(out_file, 'w') as f:\n",
     "    yaml.dump(lobes, f, default_flow_style=False, sort_keys=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Blood vessel roots"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "scan = 'ATM_253'\n",
+    "root_files = glob.glob(f'/home/anna/Desktop/MA/ATM_data/{scan}/blood_vessels/*.mrk.json')"
+   ]
   }
  ],
  "metadata": {
@@ -138,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
