add blood vessel roots

--- a/vessel_graph_generation/geometries/create_geometries.py.ipynb
+++ b/vessel_graph_generation/geometries/create_geometries.py.ipynb
@@ -131,8 +131,49 @@
    "outputs": [],
    "source": [
     "scan = 'ATM_253'\n",
-    "root_files = glob.glob(f'/home/anna/Desktop/MA/ATM_data/{scan}/blood_vessels/*.mrk.json')"
+    "out_file = f'/home/anna/Desktop/MA/ATM_data/{scan}/{scan}_vessel_roots.yml'\n",
+    "\n",
+    "# weird_spacing\n",
+    "with open(f'/home/anna/Desktop/MA/ATM_data/{scan}/{scan}_spacing.yml') as f:\n",
+    "    spacing = yaml.safe_load(f)\n",
+    "\n",
+    "p_min = np.array((spacing['x_min'], spacing['y_min'], spacing['z_min']))\n",
+    "p_max = np.array((spacing['x_max'], spacing['y_max'], spacing['z_max']))\n",
+    "size = np.array((spacing['x_out'], spacing['y_out'], spacing['z_out']))\n",
+    "\n",
+    "lobes = {}\n",
+    "for i in range(5):\n",
+    "    root_files = glob.glob(f'/home/anna/Desktop/MA/ATM_data/{scan}/blood_vessels/{i}/*.mrk.json')\n",
+    "    roots = []\n",
+    "    for root_file in root_files:\n",
+    "        with open(root_file) as f:\n",
+    "            marker_dict = json.load(f)\n",
+    "        points = marker_dict['markups'][0]['controlPoints']\n",
+    "        point1 = np.array(points[0]['position'])\n",
+    "        point2 = np.array(points[1]['position'])\n",
+    "        position = (point1-p_min) / (p_max-p_min) # normalizing to [0, 1]\n",
+    "        position *= size\n",
+    "        direction = (point2-point1) / np.linalg.norm(point2-point1)\n",
+    "        roots.append({\n",
+    "            'position': position.tolist(),\n",
+    "            'direction': direction.tolist()\n",
+    "        })\n",
+    "    lobes[f'lobe{i}'] = roots\n",
+    "roots_dir = {\n",
+    "    'lobes': lobes\n",
+    "}\n",
+    "with open(out_file, 'w') as f:\n",
+    "    yaml.dump(lobes, f, default_flow_style=False, sort_keys=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
