--- a/vessel_graph_generation/domain_adaptations.ipynb
+++ b/vessel_graph_generation/domain_adaptations.ipynb
@@ -1,17 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## first simple domain adaptation (noise + lobe segments)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## first simple domain adaptation (noise + lobe segments)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,12 +22,19 @@
     "import nibabel as nib\n",
     "from scipy.ndimage import gaussian_filter\n",
     "import glob\n",
-    "import shutil"
+    "import shutil\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import yaml\n",
+    "from multiprocessing import Pool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def add_noise(volume, mean, std):\n",
@@ -41,105 +49,89 @@
     "    gauss = gaussian_filter(noise, sigma=1)\n",
     "    noisy = volume + gauss\n",
     "    \n",
-    "    \n",
     "    return noisy, gauss"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "scan = '257'\n",
-    "trachea = False\n",
-    "root_dir = '/media/windows/Documents and Settings/Anna/Documents/UNI/23Masterthesis/airway-seg/vessel_graph_generation/datasets/lobes/20230816_162828_6168cdd6-2d81-4b19-98d4-8860fda49f88'\n",
-    "\n",
-    "vol = nib.load(root_dir + '/volume.nii.gz').get_fdata().astype(np.float32)\n",
-    "vol = vol / 255\n",
-    "\n",
-    "lung_mask = nib.load(root_dir + '/lung.nii.gz').get_fdata().astype(np.uint8)\n",
-    "lung_mask = lung_mask >= 1\n",
-    "\n",
-    "wall_mask = nib.load(root_dir + '/airway_wall.nii.gz').get_fdata().astype(np.uint8)\n",
-    "wall_mask = wall_mask >= 1\n",
-    "\n",
-    "airway_mask = nib.load(root_dir + '/airways.nii.gz').get_fdata().astype(np.uint8)\n",
-    "airway_mask = airway_mask >= 1\n",
-    "\n",
-    "# add lung background\n",
-    "adapted_vol = lung_mask.astype(np.uint8) * 0.9\n",
-    "# add airway walls\n",
-    "adapted_vol[wall_mask] = vol[wall_mask] / 10\n",
-    "# add airways\n",
-    "adapted_vol[airway_mask] = vol[airway_mask]\n",
-    "adapted_vol = gaussian_filter(adapted_vol, sigma=0.8)\n",
-    "# adapted_vol += noise\n",
-    "\n",
-    "del vol, wall_mask"
-   ],
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
-    "adapted_vol, _ = add_noise(adapted_vol, mean=0, std=0.2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "def adapt(args):\n",
+    "    in_dir, out_dir, orig_dir, trachea = args\n",
+    "    hash = in_dir.split('/')[-1]\n",
+    "    with open(f'{in_dir}/config.yml', \"r\") as filepath:\n",
+    "        config = yaml.safe_load(filepath)\n",
+    "    scan = config['Forest']['segment_root_path'][-13:-10]\n",
+    "    \n",
+    "    vol = nib.load(in_dir + '/volume.nii.gz').get_fdata().astype(np.float32)\n",
+    "    vol = vol / 255\n",
+    "\n",
+    "    lung_mask = nib.load(in_dir + '/lung.nii.gz').get_fdata().astype(np.uint8)\n",
+    "    lung_mask = lung_mask >= 1\n",
+    "\n",
+    "    wall_mask = nib.load(in_dir + '/airway_wall.nii.gz').get_fdata().astype(np.uint8)\n",
+    "    wall_mask = wall_mask >= 1\n",
+    "\n",
+    "    airway_mask = nib.load(in_dir + '/airways.nii.gz').get_fdata().astype(np.uint8)\n",
+    "    airway_mask = airway_mask >= 1\n",
+    "\n",
+    "    # add lung background\n",
+    "    adapted_vol = lung_mask.astype(np.uint8) * 0.9\n",
+    "    # add airway walls\n",
+    "    adapted_vol[wall_mask] = vol[wall_mask] / 10\n",
+    "    # add airways\n",
+    "    adapted_vol[airway_mask] = vol[airway_mask]\n",
+    "    adapted_vol = gaussian_filter(adapted_vol, sigma=0.8)\n",
+    "\n",
+    "    del vol, wall_mask\n",
+    "    \n",
+    "    adapted_vol, _ = add_noise(adapted_vol, mean=0, std=0.2)\n",
+    "    \n",
+    "    adapted_vol *= -950\n",
+    "\n",
+    "    orig_img = nib.load(f'{orig_dir}/images/ATM_{scan}_0000.nii.gz')\n",
+    "    orig_vol = orig_img.get_fdata()\n",
+    "    affine = orig_img.affine\n",
+    "    del orig_img\n",
+    "\n",
+    "    # add original background\n",
+    "    adapted_vol[lung_mask == False] = orig_vol[lung_mask == False]\n",
+    "    adapted_vol = adapted_vol.astype(np.float32)\n",
+    "\n",
+    "    nifti = nib.Nifti1Image(adapted_vol, affine)\n",
+    "    nib.save(nifti, f\"{out_dir}/images/{hash}_adapted_vol.nii.gz\")\n",
+    "\n",
+    "    if trachea:\n",
+    "        orig_seg = nib.load(f'{orig_dir}/labels/ATM_{scan}_0000.nii.gz').get_fdata()\n",
+    "        main_bronchi = np.where(np.bitwise_and(lung_mask == False, orig_seg >= 1), True, False)\n",
+    "        adapted_airway = airway_mask.astype(np.uint8)\n",
+    "        adapted_airway[main_bronchi] = 1\n",
+    "        nifti = nib.Nifti1Image(adapted_airway, affine) #np.eye(4))\n",
+    "    else:\n",
+    "        nifti = nib.Nifti1Image(airway_mask.astype(np.uint8), affine)\n",
+    "    nib.save(nifti, f\"{out_dir}/labels/{hash}_adapted_label.nii.gz\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "adapted_vol *= -950\n",
-    "\n",
-    "orig_img = nib.load(f'/home/anna/Desktop/MA/ATM_data/ATM_{scan}/ATM_{scan}_0000_image.nii.gz')\n",
-    "orig_vol = orig_img.get_fdata()\n",
-    "affine = orig_img.affine\n",
-    "del orig_img\n",
-    "\n",
-    "# add original background\n",
-    "adapted_vol[lung_mask == False] = orig_vol[lung_mask == False]\n",
-    "adapted_vol = adapted_vol.astype(np.float32)\n",
-    "\n",
-    "nifti = nib.Nifti1Image(adapted_vol, affine)\n",
-    "nib.save(nifti, f\"{root_dir}/{root_dir.split('/')[-1]}_adapted_vol.nii.gz\")\n",
-    "\n",
-    "if trachea:\n",
-    "    orig_seg = nib.load(f'/home/anna/Desktop/MA/ATM_data/ATM_{scan}/ATM_{scan}_0000_label.nii.gz').get_fdata()\n",
-    "    main_bronchi = np.where(np.bitwise_and(lung_mask == False, orig_seg >= 1), True, False)\n",
-    "    adapted_airway = airway_mask.astype(np.uint8)\n",
-    "    adapted_airway[main_bronchi] = 1\n",
-    "    nifti = nib.Nifti1Image(adapted_airway, affine) #np.eye(4))\n",
-    "else:\n",
-    "    nifti = nib.Nifti1Image(airway_mask.astype(np.uint8), affine)\n",
-    "nib.save(nifti, f\"{root_dir}/{root_dir.split('/')[-1]}_adapted_label.nii.gz\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## dataset_3"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## dataset_2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "in_dir = '/home/ahaas/airway-seg/vessel_graph_generation/datasets/dataset_1'\n",
@@ -155,29 +147,55 @@
     "    \n",
     "    nifti = nib.Nifti1Image(airway_mask.astype(np.uint8), affine) #np.eye(4))\n",
     "    nib.save(nifti, f\"{out_dir}/labels/{hash}_adapted_label.nii.gz\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## dataset_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_dirs = sorted(glob.glob('/home/ahaas/airway-seg/vessel_graph_generation/datasets/lobes/20230817*'))\n",
+    "out_dir = '/home/ahaas/airway-seg/vessel_graph_generation/datasets/dataset_3'\n",
+    "print(out_dir)\n",
+    "orig_dir = '/home/shared/Data/ATM22/train/'\n",
+    "os.makedirs(f'{out_dir}/images', exist_ok=True)\n",
+    "os.makedirs(f'{out_dir}/labels', exist_ok=True)\n",
+    "args = []\n",
+    "for in_dir in in_dirs:\n",
+    "    args.append((in_dir, out_dir, orig_dir, False))\n",
+    "    #adapt(in_dir=in_dir, out_dir=out_dir, orig_dir=orig_dir, trachea=False)\n",
+    "with Pool(15) as p, tqdm(total=len(args)) as pbar:\n",
+    "    for _ in p.imap_unordered(adapt, args):\n",
+    "        pbar.update()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "Python 3 (ipykernel)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
