--- a/vessel_graph_generation/geometries/create_geometries.ipynb
+++ b/vessel_graph_generation/geometries/create_geometries.ipynb
@@ -20,7 +20,6 @@
    "source": [
     "import numpy as np\n",
     "import nibabel as nib\n",
-    "# import itk\n",
     "import json\n",
     "import yaml\n",
     "import glob\n",
@@ -33,8 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scans = ['056', '057', '116', '175', '253', '255', '257']\n",
-    "scans = ['010', '027', '221']"
+    "scans = ['010', '027', '056', '057', '116', '175', '253', '221', '255', '257']"
    ]
   },
   {
@@ -45,6 +43,15 @@
    },
    "source": [
     "## Lung mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- prepare simulation spaces\n",
+    "- starting from the output of lungmask (https://github.com/JoHof/lungmask)\n",
+    "- save the masks for each lobe in a separate npy file"
    ]
   },
   {
@@ -88,6 +95,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- extract root positions and directions from 3Dslicer's markup files\n",
+    "- save roots in yml files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -99,7 +114,6 @@
     "\n",
     "def markers2yml(scan, option='airways'):\n",
     "    os.makedirs(f'{base_dir}/geometries/ATM_{scan}/', exist_ok=True)\n",
-    "    # out_file = f'{base_dir}/geometries/ATM_{scan}/ATM_{scan}_{option}_roots.yml'\n",
     "\n",
     "    lobes = {}\n",
     "    # weird_spacing\n",
@@ -129,7 +143,7 @@
     "            })\n",
     "\n",
     "        lobes[f'lobe{lobe_idx}'] = roots\n",
-    "        with open(f'{base_dir}/geometries/ATM_{scan}/lobe_{lobe_idx}_{option}s_roots.yml', 'w') as f:\n",
+    "        with open(f'ATM_{scan}/lobe_{lobe_idx}_{option}s_roots.yml', 'w') as f:\n",
     "            yaml.dump(roots, f, default_flow_style=False, sort_keys=False)\n",
     "    # with open(out_file, 'w') as f:\n",
     "    #     yaml.dump(lobes, f, default_flow_style=False, sort_keys=False)"
@@ -145,13 +159,6 @@
     "    markers2yml(scan, 'airway')\n",
     "    markers2yml(scan, 'vessel')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
